...
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/event_fragment_all_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_event_button_all" />

        <Button
            android:id="@+id/event_fragment_fav_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorGrayDarkTransparent"
            android:text="@string/fragment_event_button_fav" />

        <ImageButton
            android:id="@+id/event_fragment_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:scaleType="fitCenter"
            android:src="@drawable/setting"
            android:contentDescription="TODO" />

    </LinearLayout>

    <ListView
        android:id="@+id/event_fragment_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/even_filter_constraintLayout" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/even_filter_constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/event_fragment_listview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttons_layout">

        <EditText
            android:id="@+id/event_fragment_search_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
...
            android:hint="@string/fragment_event_search_bar_text"
            android:inputType="textPersonName"
            android:textColor="#80000000"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/event_fragment_checkbox_sort_like"
            app:layout_constraintTop_toBottomOf="@+id/event_fragment_from_date"
            app:layout_constraintVertical_bias="0.3" />

        <CheckBox
            android:id="@+id/event_fragment_checkbox_sort_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/fragment_event_checkbox_sort_likes"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/event_fragment_search_bar"
            app:layout_constraintStart_toEndOf="@+id/event_fragment_checkBox_sort_name"
            app:layout_constraintTop_toBottomOf="@+id/event_fragment_from_date" />

        <EditText
            android:id="@+id/event_fragment_to_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
...
            android:longClickable="false"
            android:singleLine="true"
            android:textColor="#80000000"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/event_fragment_search_bar"
            app:layout_constraintEnd_toStartOf="@+id/event_fragment_to_date"
            app:layout_constraintStart_toEndOf="@+id/event_fragment_checkBox_sort_date"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/event_fragment_checkBox_sort_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
