...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_event_name">

        <ImageButton
            android:id="@+id/card_event_like_button"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/likebutton"
            android:clickable="true"
            android:contentDescription="@string/follow"
...
