...
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/post_up_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="up button"
                app:srcCompat="@drawable/up_white" />

...
                android:gravity="center_vertical|center_horizontal"
                android:text="5"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/post_down_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="down button"
                app:srcCompat="@drawable/down_white" />
        </LinearLayout>
...
