...
            android:layout_marginRight="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/settings_dark_mode"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/text_notifications"
            app:layout_constraintEnd_toStartOf="@+id/switch_night_light"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Switch
...
            android:layout_marginRight="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/settings_notifications"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/anonym_text"
            app:layout_constraintEnd_toStartOf="@+id/switch_notifications"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_night_light" />

        <Switch
            android:id="@+id/switch_notifications"
...
            android:layout_marginRight="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/anonymity"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/clear_text"
            app:layout_constraintEnd_toStartOf="@+id/switch_chat_anonym"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_notifications" />

        <Switch
            android:id="@+id/switch_chat_anonym"
...
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="24dp"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@id/switch_notifications"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_clear_cache"
            app:layout_constraintVertical_bias="0.558" />

        <TextView
            android:id="@+id/clear_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
