<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_main"
            android:title="@string/drawer_main" />
        <item
            android:id="@+id/nav_associations"
            android:icon="@drawable/ic_assoc"
            android:title="@string/drawer_associations" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event"
            android:title="@string/drawer_events" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/drawer_settings" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login_logout"
            android:title="@string/drawer_login" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/drawer_about_us" />
        <item
            android:id="@+id/nav_associations_generator"
            android:icon="@drawable/ic_cloud_download_black_24dp"
            android:title="@string/drawer_associations_generator" />
    </group>
</menu>